--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon listener.js",
-    "test": "NODE_ENV=development jest --detectOpenHandles"
+    "test": "NODE_ENV=development jest"
   },
   "apidoc": {
     "name": "Comikart",
