--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon listener.js",
-    "test": "NODE_ENV=development jest"
+    "test": "NODE_ENV=development jest && codecov"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "apidoc": {
     "name": "Comikart",
@@ -35,6 +39,7 @@
     "pg": "^7.11.0"
   },
   "devDependencies": {
+    "codecov": "^3.4.0",
     "jest": "^24.8.0",
     "supertest": "^4.0.2"
   }
