--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "codecov": "^3.4.0",
     "jest": "^24.8.0",
+    "nodemon": "^1.19.0",
     "supertest": "^4.0.2"
   }
 }
