--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -1,15 +1,1 @@
-{
-  "name": "Comikart",
-  "version": "1.0.0",
-  "description": "Comikart API Documentation.",
-  "title": "Comikart API",
-  "sampleUrl": false,
-  "defaultVersion": "0.0.0",
-  "apidoc": "0.3.0",
-  "generator": {
-    "name": "apidoc",
-    "time": "2019-05-16T05:54:35.623Z",
-    "url": "http://apidocjs.com",
-    "version": "0.17.7"
-  }
-}
+{  "name": "Comikart",  "version": "1.0.0",  "description": "Comikart API Documentation.",  "title": "Comikart API",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2019-05-20T18:56:55.359Z",    "url": "http://apidocjs.com",    "version": "0.17.7"  }}
