--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "taxjar": "^2.2.2"
   },
   "devDependencies": {
     "apidoc": "^0.17.7",
