--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "apidoc": "^0.17.7",
     "codecov": "^3.4.0",
     "jest": "^24.8.0",
+    "mock-knex": "^0.4.5",
     "nodemon": "^1.19.0",
     "supertest": "^4.0.2"
   }
