--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "pg": "^7.11.0",
+    "redis": "^2.8.0",
     "taxjar": "^2.2.2"
   },
   "devDependencies": {
