--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^8.1.0",
     "next-fonts": "^0.17.0",
     "next-images": "^1.1.2",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "node-cron": "^2.0.3",
     "node-sass": "^4.12.0",
     "perfect-scrollbar": "^1.4.0",
@@ -48,6 +49,7 @@
     "react-dom": "^16.8.6",
     "reactstrap": "^8.0.0",
     "redis": "^2.8.0",
+    "redux": "^4.0.1",
     "taxjar": "^2.2.2"
   },
   "devDependencies": {
