--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "reactstrap": "^8.0.0",
     "redis": "^2.8.0",
     "redux": "^4.0.1",
