--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "listener.js",
   "scripts": {
     "prestart": "next build",
-    "start": "NODE_ENV=production node listener.js",
+    "start": "node listener.js",
     "build": "next build",
     "dev": "node listener.js",
     "test": "NODE_ENV=development jest --coverage && codecov",
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/comikart/ComikartAPI#readme",
   "dependencies": {
+    "@babel/core": "^7.4.5",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "acorn": "^6.1.1",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
