--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "acorn": "^6.1.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
@@ -54,6 +55,7 @@
     "reactstrap": "^8.0.0",
     "redis": "^2.8.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "taxjar": "^2.2.2"
   },
   "devDependencies": {
